--- a/style.css
+++ b/style.css
@@ -62,3 +62,25 @@ input[type="submit"]:hover {
   border-radius: 5px;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 }
+
+.photo {
+  position: relative;
+}
+
+.text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s, opacity 0.5s ease-in-out;
+  color: #00ff08;
+  /* make it bold */
+  font-weight: bold;
+}
+
+.photo:hover .text {
+  visibility: visible;
+  opacity: 1;
+}
